Add footer on posts

--- a/template.html
+++ b/template.html
@@ -18,9 +18,22 @@
     ></script>
   </head>
   <body>
-	<h1 class="title is-1">$title$</h1>
+    <h1 class="title is-1">$title$</h1>
     <div id="iced_root"></div>
     <div class="content p-2">$body$</div>
+    <footer class="footer">
+      <div class="content has-text-centered">
+        <h6 class="title is-6"><a href="../index.html">Back to index</a></h6>
+        <p>
+          The source code is licensed
+          <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. The
+          website content is licensed
+          <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/"
+            >CC BY NC SA 4.0</a
+          >.
+        </p>
+      </div>
+    </footer>
     <link
       data-trunk
       rel="rust"
