Add links to the source code

--- a/template.html
+++ b/template.html
@@ -24,6 +24,7 @@
     <footer class="footer">
       <div class="content has-text-centered">
         <h6 class="title is-6"><a href="../index.html">Back to index</a></h6>
+		<h6 class="title is-6"><a href="https://github.com/traxys/viz">Source code</a></h6>
         <p>
           The source code is licensed
           <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. The
